# algorithms-and-data-structures

./: README.md
ejudge/module1/array_queue/: array_queue.py  in.txt  out.txt
ejudge/module1/array_stack/: CMakeLists.txt  array_stack.h  array_stack.py  array_stack_unittests.cpp  main.cpp  test.txt
ejudge/module1/graph_traversal/: CMakeLists.txt  graph_traversal.cpp  graph_traversal.h  graph_traversal_unittests.cpp  main.cpp
ejudge/module1/summator/: in.txt  summator.py
ejudge/module2/bloom_filter/: CMakeLists.txt  bloom_filter.cpp
ejudge/module2/splay_tree/: CMakeLists.txt  splay_tree.cpp
hw1/: CMakeLists.txt  README.md
hw1/task1_exponentiation/: CMakeLists.txt  exponentiation.cpp  exponentiation.h  exponentiation_unittests.cpp
hw1/task2_fibonacci/: CMakeLists.txt  fibonacci.cpp  fibonacci.h  fibonacci_unittests.cpp
hw1/task3_permutations/: CMakeLists.txt  README.md  permutation.h  permutation_unittests.cpp
hw1/task4_is_prime/: CMakeLists.txt  is_prime.cpp  is_prime.h  is_prime_unittests.cpp
hw2/: CMakeLists.txt
hw2/task1_reverse/: CMakeLists.txt  reverse.h  reverse_unittests.cpp
hw2/task2_stack_queue/: CMakeLists.txt  queue.h  queue_unittests.cpp  stack.h  stack_unittests.cpp
hw2/task3_packing/: CMakeLists.txt  README.md  deck_packing.cpp  deck_packing.h  deck_packing_unittests.cpp
hw2/task4_deque/: CMakeLists.txt  deque.h  deque_unittests.cpp
hw2/task5_remove_sequences/: CMakeLists.txt  remove_sequences.h  remove_sequences_unittests.cpp
